--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
 	<header>
 		<div class="banner">
 			<div class="logo">
@@ -27,7 +28,7 @@
 						<a class="nav-link" href="index.html">Inicio</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Lecturas</a>
+						<a class="nav-link" href="Lecturas.html">Lecturas</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Multimedia</a>
